Don't show "Show all passwords" drop-down in Guest profile.

Bug: 754590
Change-Id: Iafe620765a87b20339bcdd94cfb2e882a6a53548
Reviewed-on: https://chromium-review.googlesource.com/635684
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Tatiana Gornak <melandory@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497737}
Former-commit-id: 0578a2fd1f336b8e83aec0ed9952f0e87486d858