components/password_manager/core/browser/password_autofill_manager.cc
@@ -26,7 +26,6 @@
 #include "components/autofill/core/common/autofill_data_validation.h"
 #include "components/autofill/core/common/autofill_util.h"
 #include "components/password_manager/core/browser/android_affiliation/affiliation_utils.h"
-#include "components/password_manager/core/browser/password_manager.h"
 #include "components/password_manager/core/browser/password_manager_client.h"
 #include "components/password_manager/core/browser/password_manager_driver.h"
 #include "components/password_manager/core/browser/password_manager_metrics_recorder.h"
@@ -139,9 +138,12 @@ void GetSuggestions(const autofill::PasswordFormFillData& fill_data,
 
 PasswordAutofillManager::PasswordAutofillManager(
     PasswordManagerDriver* password_manager_driver,
-    autofill::AutofillClient* autofill_client)
-    : password_manager_driver_(password_manager_driver),
+    autofill::AutofillClient* autofill_client,
+    PasswordManagerClient* password_client)
+    : form_data_key_(-1),
+      password_manager_driver_(password_manager_driver),
       autofill_client_(autofill_client),
+      password_client_(password_client),
       weak_ptr_factory_(this) {}
 
 PasswordAutofillManager::~PasswordAutofillManager() {
@@ -264,7 +266,8 @@ void PasswordAutofillManager::OnShowPasswordSuggestions(
 
   if (base::FeatureList::IsEnabled(
           password_manager::features::kEnableManualFallbacksFilling) &&
-      (options & autofill::IS_PASSWORD_FIELD)) {
+      (options & autofill::IS_PASSWORD_FIELD) && password_client_ &&
+      password_client_->IsFillingFallbackEnabledForCurrentPage()) {
 #if !defined(OS_ANDROID)
     suggestions.push_back(autofill::Suggestion());
     suggestions.back().frontend_id = autofill::POPUP_ITEM_ID_SEPARATOR;
@@ -318,6 +321,9 @@ void PasswordAutofillManager::OnShowManualFallbackSuggestion(
   // case because it doesn't instantiate many helper classes. |autofill_client_|
   // is NULL too.
   if (!autofill_client_)
+    return;
+  if (!password_client_ ||
+      !password_client_->IsFillingFallbackEnabledForCurrentPage())
     return;
   std::vector<autofill::Suggestion> suggestions;
   autofill::Suggestion all_saved_passwords(
@@ -387,20 +393,16 @@ void PasswordAutofillManager::DidAcceptSuggestion(const base::string16& value,
     metrics_util::LogContextOfShowAllSavedPasswordsAccepted(
         show_all_saved_passwords_shown_context_);
 
-    PasswordManager* password_manager =
-        password_manager_driver_->GetPasswordManager();
-    PasswordManagerClient* client =
-        password_manager ? password_manager->client() : nullptr;
-    if (client) {
+    if (password_client_) {
       using UserAction =
           password_manager::PasswordManagerMetricsRecorder::PageLevelUserAction;
       switch (show_all_saved_passwords_shown_context_) {
         case metrics_util::SHOW_ALL_SAVED_PASSWORDS_CONTEXT_PASSWORD:
-          client->GetMetricsRecorder().RecordPageLevelUserAction(
+          password_client_->GetMetricsRecorder().RecordPageLevelUserAction(
               UserAction::kShowAllPasswordsWhileSomeAreSuggested);
           break;
         case metrics_util::SHOW_ALL_SAVED_PASSWORDS_CONTEXT_MANUAL_FALLBACK:
-          client->GetMetricsRecorder().RecordPageLevelUserAction(
+          password_client_->GetMetricsRecorder().RecordPageLevelUserAction(
               UserAction::kShowAllPasswordsWhileNoneAreSuggested);
           break;
         case metrics_util::SHOW_ALL_SAVED_PASSWORDS_CONTEXT_NONE:
