components/password_manager/core/browser/password_autofill_manager_unittest.cc
@@ -116,8 +116,8 @@ class PasswordAutofillManagerTest : public testing::Test {
   void InitializePasswordAutofillManager(
       TestPasswordManagerClient* client,
       autofill::AutofillClient* autofill_client) {
-    password_autofill_manager_.reset(
-        new PasswordAutofillManager(client->mock_driver(), autofill_client));
+    password_autofill_manager_.reset(new PasswordAutofillManager(
+        client->mock_driver(), autofill_client, client));
     password_autofill_manager_->OnAddPasswordFormMapping(fill_data_id_,
                                                          fill_data_);
   }
